--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Proyecto Frontend</title>
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-   
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi Proyecto Frontend</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="https://kit.fontawesome.com/590a7c086c.js" crossorigin="anonymous"></script>
+  <script src="js/IndexScripts.js"></script>
+</head>
+
+<body>
+  <div class="cont-estructura">
+    <header class="head-page-in">
+      <div class="cont-filtro-name">
+        <div class="cont-name-empresa" onclick="InicioReload()">
+
+          <img src="https://media-tienda-esquina-6546601.s3.amazonaws.com/logo.svg" width="110px" height="110px" alt="">
+        </div>
+        <div class="cont-filtro">
+
+          <input class="style-input" type="text" placeholder="Encuentra el producto que necesitas...">
+          <button class="style-btn-filtro">
+            <i class="fa-solid fa-magnifying-glass icon"></i>
+          </button>
+        </div>
+        <div class="cont-perfil">
+          <button class="btn-options" onclick="AgregarCarrito()">
+            <span class="cantidad-car">
+
+            </span>
+            <i class="fa-solid fa-cart-shopping icon"></i>
+          </button>
+
+          <!-- BOTONES CONDICIONALES >> -->
+          <button class="btn-options" style="display: none;" onclick="OpenContLogin()">
+            <i class="fa-solid fa-right-to-bracket icon"></i>
+          </button>
+
+          <button class="btn-options" onclick="OpenUserOptions()">
+            <i class="fa-solid fa-user icon"></i>
+          </button>
+
+          <!-- CONTENEDOR DE PERFIL -->
+          <div class="cont-perfil-user">
+            <div class="cont-data-user">
+              <i class="fa-solid fa-circle-user"></i>
+              <div class="nameuser-text"> ALEXANDER CAICEDO OCORO PRIPRA</div>
+            </div>
+            <button class="btn-mdl-user" type="button">Ayuda y soporte <i class="fa-solid fa-circle-info"></i></button>
+            <button class="btn-mdl-user contra" type="button">Cerrar sesion <i
+                class="fa-solid fa-right-from-bracket"></i></button>
+          </div>
+          <!-- BOTONES CONDICIONALES << -->
+        </div>
+
+      </div>
+      <div class="cont-menu">
+        <div class="btn-menu-option">
+          Todo
+        </div>
+        <select class="style-select" name="" id="">
+          <option value="0" disabled selected>Filtrar Categorias</option>
+          <option value="1">Frutas y Verduras</option>
+          <option value="2">Carnes</option>
+          <option value="3">Granos</option>
+          <option value="4">Huevos y Lacteos</option>
+          <option value="5">Granos</option>
+        </select>
+        <div class="btn-menu-option">
+          Ofertas
+        </div>
+        <div class="btn-menu-option">
+          Categorias
+        </div>
+      </div>
+    </header>
+    <main class="cont-options-select">
+
+
+      <div class="cont-option">
+        <div class="cont-ajustable">
+
+
+          <div class="card">
+            <span class="token-categ">
+
+            </span>
+            <div class="card-img"><img src="img/carnes.png" alt=""></div>
+            <div class="card-info">
+              <p class="text-title">Arroz Diana </p>
+              <p class="text-body">Bolsa 3000gr unidad </p>
+            </div>
+            <div class="card-footer">
+              <span class="text-title precio">$3.200</span>
+              <div class="card-button" onclick="AgregarCarrito()">
+                <svg class="svg-icon" viewBox="0 0 20 20">
+                  <path
+                    d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z">
+                  </path>
+                  <path
+                    d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z">
+                  </path>
+                  <path
+                    d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z">
+                  </path>
+                </svg>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </main>
+
+  </div>
+
+
+  <!-- Modal login -->
+  <div class="cont-login-user">
+    <div class="cont-login">
+
+      <div class="container">
+
+        <div class="heading">Iniciar Sesión
+          <i class="fa-solid fa-circle-xmark ekis" onclick="CloseLogin()"></i>
+        </div>
+        <form action="" class="form">
+          <input required="" class="input" type="email" name="email" id="email" placeholder="Correo electrónico">
+          <input required="" class="input" type="password" name="password" id="password" placeholder="Contraseña">
+          <span class="forgot-password"><a href="recuperar_contraseña.html">¿Olvidaste tu contraseña ?</a></span>
+          <input class="login-button" type="submit" value="Iniciar">
+
+        </form>
+        <span class="agreement"><a href="registrarse.html">Crear usuario</a></span>
+      </div>
+    </div>
+  </div>
+
+
+
+</body>
+
 </html>
