Cambio de momento victor le dice a joel

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                       </div>
                     </div>
 
+<!-- HASTA AQUI CON INNERHTML -->
 
                   </div>
                 </div>
