--- a/recuperar_contraseña.html
+++ b/recuperar_contraseña.html
@@ -13,7 +13,7 @@
         <div class="cont-form">
             <div class="head-form"> 
                 <h2>Recuperar Contraseña</h2>
-                <img class="style-img" src="https://media-tienda-esquina-6546601.s3.amazonaws.com/logo.svg" alt="Your Company">
+                <img class="style-img" src="img/logo.png" alt="Your Company">
                
             </div>
 
@@ -24,6 +24,6 @@
         </div>
         
     </div>
+    <script src="js/Tunel.js"></script>
 </body>
-
 </html>
