--- a/registrarse.html
+++ b/registrarse.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/registroCliente.css" />
+    <script
+      src="https://kit.fontawesome.com/590a7c086c.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Registrarse</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/registroCliente.css" />
-  <script src="js/CreateCliente.js"></script>
-  <title>Registrarse</title>
-</head>
+  <body>
+    <!-- Alerta -->
+    <!-- <div id="toast-container"></div> -->
 
-<body>
-  <div class="contenedor-form registrar">
-
-    <div class="cont-form">
-      <div class="head-form">
-        <h2 onclick="crearUser()">Registrarse</h2>
-        <img class="style-img" src="https://media-tienda-esquina-6546601.s3.amazonaws.com/logo.svg" alt="Your Company" />
+    <div class="contenedor-form registrar">
+      <div class="cont-form">
+        <div class="head-form">
+          <h2>Registrarse</h2>
+          <img class="style-img" src="img/logo.png" alt="Your Company" />
+        </div>
+        <form action="" onsubmit="return crearUser(event)">
+          <input type="text" name="nombre" placeholder="Nombre" required />
+          <input type="text" name="apellido" placeholder="Apellido" required />
+          <input
+            type="text"
+            name="correo_electronico"
+            placeholder="Correo electronico"
+            required
+          />
+          <input type="password" name="contrasena" placeholder="Contraseña" />
+          <input
+            type="password"
+            name="confirmar_contrasena"
+            placeholder="Confirma tu contraseña"
+            required
+          />
+          <input type="submit" class="btn_crear_cuenta" value="Crear Cuenta" />
+        </form>
       </div>
-      <form action="">
-        <input type="text" name="nombre" placeholder="Nombre" required />
-        <input type="text" name="apellido" placeholder="Apellido" required />
-        <input type="text" name="correo electronico" placeholder="Correo electronico" required />
-        <input type="password" name="contrasena" placeholder="Contraseña" required />
-        <input type="password" name="confirmar_contrasena" placeholder="Confirma tu contraseña" required />
-        <input type="submit" value="Crear Cuenta"/>
-      </form>
-    </div>
 
-    <div class="cont-codigo">
-      <div class="messajeCorreo">
-        te enviamos un codigo a tu correo, ingresalo para continuar:
+      <div class="cont-codigo">
+        <div class="messajeCorreo">
+          Te enviamos un codigo a tu correo, ingresalo para continuar:
+        </div>
+        <form action="" onsubmit="return submitCodigoConfirmacion(event)">
+          <input
+            type="number"
+            id="codigo"
+            class="input-number"
+            placeholder="000000"
+            name="codigo_confirmacion"
+            minlength="6"
+            oninput="limitarLongitud(this)"
+            required
+          />
+          <input type="submit" class="btn_validar_codigo" value="Validar codigo" />
+        </form>
       </div>
-      <form action="">
-        <input type="number" id="codigo" class="input-number" placeholder="000000" maxlength="6" oninput="limitarLongitud(this)" required />
-        <input type="submit" value="Crear Cuenta" />
-      </form>
     </div>
-
-  </div>
-</body>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/alerta.js"></script>
+    <script src="js/Tunel.js"></script>
+    <script src="js/CreateCliente.js"></script>
+  </body>
 </html>
