NUEVOS CAMBIOS EXTRAÑOS QUE HAY EN MI

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           </button>
         </div>
         <div class="cont-perfil">
-          <button class="btn-options" onclick="OpenCarShop()">
+          <button class="btn-options iconcarrito" onclick="OpenCarShop()">
 
 
             <span class="cantidad-car">
-
+            
             </span>
             <i class="fa-solid fa-cart-shopping icon"></i>
           </button>
@@ -61,34 +61,7 @@
                   <div class="cont-carrito">
 
 <!-- MENSAJE EN CASO DE QUE NO HAYA REGISTROS EN BD -->
-                    <div class="mensajeRespuesta">
-                      No has escogido ningun producto.
-                    </div>
-
-                    <!-- CONTENIDO GENERADO CON AJAX -->
-                    <div class="carrito-card">
-                      <img src="https://demo.innovacionfac.com/assets/uploads/1da773a7eae8c49d29b68c590057b9d5.jpg" class="img-producto-car" alt="">
-                      <div class="cont-name-descripcion">
-                        <div class="name-producto">
-                          Arroz Diana
-                        </div>
-                        <div class="descrip-producto">
-                          Bolsa 3000gr Unidad
-                        </div>
-                      </div>
-                      <div class="cantidad-precio">
-                        <div class="cantidad-productos">
-                          <span class="Ncantidad">1</span>
-                        </div>
-                        <div class="cont-precio-car">
-                          <span class="valor-precio">
-                            $3.2000 COP
-                          </span>
-                          <i class="fa-solid fa-trash basury"></i>
-                        </div>
-
-                      </div>
-                    </div>
+                    
 
 <!-- HASTA AQUI CON INNERHTML -->
 
@@ -117,8 +90,6 @@
 
             <i class="fa-solid fa-circle-xmark Euser" onclick="CloseUserOptions()"></i>
             <div class="cont-data-user">
-              <i class="fa-solid fa-circle-user"></i>
-              <div class="nameuser-text"> ALEXANDER CAICEDO OCORO PRIPRA</div>
             </div>
             <button class="btn-mdl-user" type="button">Ayuda y soporte <i class="fa-solid fa-circle-info"></i></button>
             <button class="btn-mdl-user contra" onclick="cerrarSesion()" type="button">Cerrar sesion
