--- a/registrarse.html
+++ b/registrarse.html
@@ -47,7 +47,7 @@
         </div>
         <form action="" onsubmit="return submitCodigoConfirmacion(event)">
           <input
-            type="number"
+            type="text"
             id="codigo"
             class="input-number"
             placeholder="000000"
