--- a/index.html
+++ b/index.html
@@ -125,8 +125,12 @@
       <div class="cont-option">
         <div class="cont-ajustable">
 
-        </div>
+          
 
+        </div>
+        <div class="cont-categorias-exhibicion">
+          
+        </div>
 
       </div>
 
